EventChooserController updated